# Write-toy-arc-dry-run

./: .env.example  .gitignore  README.md  pyproject.toml  report.xml  run_llm_dry_run.py  run_long_arc_stress.py  verify_llm_dry_run.py
.claude/: settings.local.json
docs/: deferred-scope.md  phase2_flow_context_baseline.md  phase2_protocol_freeze_verification.md  phase2_retrieval_schema_baseline.md  phase2_test_baseline.generated.md  phase3-acceptance-report-generated.md  phase3-audit-report.md  phase3-final-acceptance-audit-report.md  phase3-final-acceptance-report.md  phase3-requirement-gap-analysis.md  phase3-squad-root-cause-analysis.md  phase3_test_baseline.generated.md
scripts/: phase3_auto_runner.py  run_stress_test.py  scan_forbidden_paths.py  verify_phase3_entry_gate.py
tests/: conftest.py  helpers.py  symlink_helper.py  test_apply_missing_provenance.py  test_apply_prevalidation.py  test_apply_rejects_derived_source.py  test_arc_active_integration.py  test_arc_plan_schema.py  test_arc_planning_engine.py  test_arc_state_guard.py  test_arc_state_manager.py  test_atomic_apply.py  test_atomic_apply_security.py  test_auditor_comparator.py  test_canonical_hash_protocol.py  test_chaos.py  test_chapter_commit.py  test_chapter_effect.py  test_character_consistency_engine.py  test_character_state_schema.py  test_config.py  test_context_provider_stable_pointer.py  test_crewai_tools.py  test_dashboard_not_apply_input.py  test_derived_artifact_policy.py  test_derived_path_hardening.py  test_drift_gold_dataset.py  test_drift_streak_auditor.py  test_e2e_failure_paths.py  (+75 more)
(+415 files in other folders)
