[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novel-workflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
