[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novel-workflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "crewai>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_symlink: tests that require symlink creation (admin on Windows)",
    "requires_crewai: tests that require the crewai package",
]
